--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -195,9 +196,12 @@
             </execution>
          </executions>
       </plugin>
-  
-
-			
+		<plugin>
+	     <groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-war-plugin</artifactId>
+			<version>3.3.1</version>
+		</plugin>
+  	
 						<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -515,11 +519,11 @@
             </reporting>
         </profile>
     </profiles>
-   <distributionManagement>
+	<distributionManagement>
     <repository>
         <id>central</id>
-        <name>xxx</name>
-        <url>https://xxx.jfrog.io/artifactory/adbook-libs-release</url>
+        <name>a0nefhmalf6hc-artifactory-primary-0-releases</name>
+        <url>https://trialy4un1n.jfrog.io/artifactory/tomcat-libs-release</url>
     </repository>
 </distributionManagement>
 </project>
